# my_turtlebot3

./: .gitignore  README.md
explore/: .gitignore  package.xml
explore/config/: params.yaml  params_costmap.yaml
explore/include/explore/: explore.h  frontier_search.h
explore/src/: explore.cpp  frontier_search.cpp
pet_tracker/: CMakeLists.txt  package.xml
pet_tracker/include/pet_tracker/: pet_tracker.hpp
pet_tracker/launch/: pet_tracker.launch..py
pet_tracker/src/: pet_tf_publisher.cpp  pet_tracker.cpp
robot_bt_pet_tracker/: CMakeLists.txt  package.xml
robot_bt_pet_tracker/behavior_tree_xml/: pet_tracker.xml
robot_bt_pet_tracker/cmake/: FindZMQ.cmake
robot_bt_pet_tracker/include/robot_bt_pet_tracker/: BeginTracker.hpp  FindPet.hpp  Follow.hpp  GetWaypoint.hpp  Move.hpp  Patrol.hpp
robot_bt_pet_tracker/include/robot_bt_pet_tracker/ctrl_support/: BTActionNode.hpp
robot_bt_pet_tracker/src/: pet_tracker_main.cpp
robot_bt_pet_tracker/src/robot_bt_pet_tracker/: BeginTracker.cpp  FindPet.cpp  Follow.cpp  GetWaypoint.cpp  Move.cpp  Patrol.cpp
robot_controller/: CMakeLists.txt  package.xml
robot_controller/include/robot_controller/: robot_state_machine.hpp
robot_controller/launch/: robot_state_machine.launch.py
robot_controller/script/: start_simulation.sh
robot_controller/src/: robot_state_machine.cpp
robot_docking_server/: CMakeLists.txt  package.xml
robot_docking_server/include/robot_docking_server/: robot_docking_server.hpp
robot_docking_server/launch/: robot_docking_server.launch.py
robot_docking_server/src/: robot_docking_server.cpp  robot_pose_publisher.cpp  working.cpp
robot_interfaces/: CMakeLists.txt  package.xml
robot_interfaces/action/: Docking.action
ros2_aruco/ros2_aruco/config/: aruco_parameters.yaml
ros2_aruco/ros2_aruco/ros2_aruco/: aruco_node.py
turtlebot3_gazebo/: CMakeLists.txt
turtlebot3_gazebo/launch/: display.launch.py  navigation2.launch.py  robot_state_publisher.launch.py  turtlebot3_house.launch.py
turtlebot3_gazebo/maps/: map_my_house.pgm  map_my_house.yaml  my_house.pgm  my_house.yaml  robot_house.yaml
turtlebot3_gazebo/models/cat/: model.config  model.sdf
turtlebot3_gazebo/models/charging_dock/: model.sdf
turtlebot3_gazebo/models/person/: model.config  model.sdf
turtlebot3_gazebo/models/turtlebot3_house/: model.sdf
turtlebot3_gazebo/models/turtlebot3_waffle/: model.sdf
turtlebot3_gazebo/param/: waffle.yaml
turtlebot3_gazebo/rviz/: turtlebot3.rviz
turtlebot3_gazebo/scripts/: nav2_command.py
turtlebot3_gazebo/urdf/: turtlebot3_waffle.urdf
turtlebot3_gazebo/worlds/: my_world.world  turtlebot3_house.world
turtlebot_bringup/: CMakeLists.txt  package.xml
turtlebot_bringup/launch/: simulated_robot.launch.py
yolobot_recognition/scripts/: yolov8_ros2_pt.py
